# yolov9-deepsort-mot

./: .gitignore  Makefile  README.md  detect_dual_tracking.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: tree-checkpoint.py
configs/: default.yaml  ultralytics_deepsort.yaml
configs/.ipynb_checkpoints/: default-checkpoint.yaml
evaluation/: evaluate_mot.py
evaluation/.ipynb_checkpoints/: evaluate_mot-checkpoint.py
scripts/: benchmark.py  download_dataset.py  download_models.py  run_demo.py
scripts/.ipynb_checkpoints/: run_demo-checkpoint.py
src/: annotator.py  config.py  schemas.py
src/.ipynb_checkpoints/: annotator-checkpoint.py
src/captioning/: base.py  template_captioner.py
src/detectors/: base.py  factory.py  ultralytics_adapter.py  yolov9.py
src/detectors/.ipynb_checkpoints/: ultralytics_adapter-checkpoint.py
src/io/: mot_exporter.py  video_reader.py  video_writer.py
src/pipeline/: orchestrator.py
src/pipeline/.ipynb_checkpoints/: orchestrator-checkpoint.py
src/trackers/: deepsort_tracker.py
src/trackers/.ipynb_checkpoints/: base-checkpoint.py  deepsort_tracker-checkpoint.py  factory-checkpoint.py
src/utils/: bbox_utils.py
tests/: test_bbox_utils.py  test_mot_exporter.py  test_schemas.py  test_template_captioner.py
